# cortex

./: .gitignore  CLAUDE.md  LICENSE  README.md  install.sh  pyproject.toml
cortex/: __init__.py  chunk.py  claude.py  config.py  embed.py  extract.py  graphintel.py  http_api.py  index.py  papers.py  research.py  server.py  store.py  vault.py  watch.py
desktop/: App.swift  ContentView.swift  Cortex.icns  Cortex.swift  CortexAPI.swift  Editor.swift  GraphView.swift  Icons.swift  Info.plist  Onboarding.swift  SettingsView.swift  Shell.swift  Theme.swift  Updater.swift  VaultWatcher.swift  build.sh  shot.swift
launchd/: cortex.watch.plist.template
obsidian-plugin/: README.md  main.js  manifest.json  styles.css
webapp/: app.css  app.js  cortex-app.js  cortex.css  graph-engine.js  index.html
